
[TestDashboardView_ContextMenu - 1]
context_menu_open
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "i",
        "CurrentPage": 1,
        "PageCount": 3
      }
    }
  ]
}
---

[TestDashboardView_ContextMenu - 2]
inspect_view
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "i",
        "CurrentPage": 1,
        "PageCount": 3
      }
    },
    {
      "Type": "*views.modal_InspectView",
      "Data": {
        "Type": "InspectView",
        "Handle": "test-ws",
        "Purpose": "Test workspace",
        "Path": "/test/path/to/workspace",
        "RepoCount": 1,
        "CreatedDate": "Jan 26, 2026"
      }
    }
  ]
}
---

[TestDashboardView_ContextMenu - 3]
inspect_dismissed
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "i",
        "CurrentPage": 1,
        "PageCount": 3
      }
    }
  ]
}
---
